--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.5.0",
+    "axios": "^1.8.4",
+    "framer-motion": "^12.6.2",
+    "mongoose": "^8.13.1",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-use-gesture": "^9.1.3"
+    "react-use-gesture": "^9.1.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
